--- a/portfolio/scss/_contacts.scss
+++ b/portfolio/scss/_contacts.scss
@@ -14,6 +14,10 @@
 
   &__title {
     margin-bottom: 40px;
+
+    @media (max-width: $breakpoint-tablet) {
+      line-height: 2;
+    }
   }
 
   &__form {
