--- a/portfolio/scss/_general.scss
+++ b/portfolio/scss/_general.scss
@@ -61,18 +61,32 @@ body {
   color: $color-gold;
   font-size: 40px;
   font-family: $font-title;
+
+  @media (max-width: $breakpoint-tablet) {
+    font-size: 32px;
+  }
 }
 
 .section {
   padding-top: 100px;
 
+  @media (max-width: $breakpoint-tablet) {
+    padding-top: 80px;
+  }
+
   &__title {
     display: flex;
     gap: 20px;
     align-items: center;
-    width: 700px;
+    max-width: 700px;
     margin-inline: auto;
     margin-bottom: 60px;
+
+    @media (max-width: $breakpoint-tablet) {
+      max-width: 364px;
+      margin-bottom: 60px;
+      line-height: 80px;
+    }
 
     &::before,
     &::after {
